force-app/main/default/objects/Expo_Certificate_Assignment__c/Expo_Certificate_Assignment__c.object-meta.xml
<CustomObject>
    <description>用于记录展会不同部门持有的证书类型以及有效期</description>
    <label>Expo Certificate Assignment</label>
    <nameField>
        <displayFormat>SOI-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expo Certificate Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>