force-app/main/default/objects/Expo_Certificate_Assignment__c/fields/Certificate_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Quantity__c</fullName>
    <description>商证数量</description>
    <label>Certificate Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>