force-app/main/default/objects/Expo_Certificate_Assignment__c/fields/Contact_Email2__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email2__c</fullName>
    <formula>ContactPerson2__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email2</label>
    <type>Text</type>
</CustomField>