force-app/main/default/objects/Expo_Certificate_Assignment__c/fields/Contact_Email3__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email3__c</fullName>
    <formula>ContactPerson3__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email3</label>
    <type>Text</type>
</CustomField>