force-app/main/default/objects/Expo_Certificate_Assignment__c/fields/ContactPerson1__c.field-meta.xml
<CustomField>
    <fullName>ContactPerson1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>抄送人1</inlineHelpText>
    <label>ContactPerson1</label>
    <referenceTo>Internal_Registration__c</referenceTo>
    <relationshipLabel>Expo Certificate Assignments</relationshipLabel>
    <relationshipName>Expo_Certificate_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>