force-app/main/default/objects/Expo_Certificate_Assignment__c/fields/ContactPerson2__c.field-meta.xml
<CustomField>
    <fullName>ContactPerson2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>抄送通知人2</inlineHelpText>
    <label>ContactPerson2</label>
    <referenceTo>Internal_Registration__c</referenceTo>
    <relationshipLabel>Expo Certificate Assignments (ContactPerson2)</relationshipLabel>
    <relationshipName>Expo_Certificate_Assignments1</relationshipName>
    <type>Lookup</type>
</CustomField>