force-app/main/default/objects/Expo_Certificate_Assignment__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>部门</description>
    <label>Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>