force-app/main/default/objects/Expo_Certificate_Assignment__c/fields/Exhibition_Management__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exhibition Management</label>
    <referenceTo>ExpoInfo__c</referenceTo>
    <relationshipLabel>Expo Certificate Assignments</relationshipLabel>
    <relationshipName>Expo_Certificate_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>