force-app/main/default/objects/Expo_Certificate_Assignment__c/fields/Expend_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Expend_Quantity__c</fullName>
    <description>证书已使用数量</description>
    <label>Expend Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>