force-app/main/default/objects/Expo_Certificate_Assignment__c/fields/Is_Arranged__c.field-meta.xml
<CustomField>
    <fullName>Is_Arranged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Arranged</label>
    <type>Checkbox</type>
</CustomField>