force-app/main/default/objects/Expo_Certificate_Assignment__c/fields/Validity__c.field-meta.xml
<CustomField>
    <fullName>Validity__c</fullName>
    <description>有效天数</description>
    <label>Validity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>