force-app/main/default/objects/Expo_Certificate_Assignment__c/fields/Validity_Date__c.field-meta.xml
<CustomField>
    <fullName>Validity_Date__c</fullName>
    <defaultValue>0</defaultValue>
    <description>临时证勾选使用天数</description>
    <label>Validity Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>