force-app/main/default/objects/Expo_Certificate_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Approver__c</columns>
    <columns>Region__c</columns>
    <columns>Company__c</columns>
    <columns>Department__c</columns>
    <columns>Certificate_Type_Two__c</columns>
    <columns>Certificate_Quantity__c</columns>
    <columns>Certificate_Type_One__c</columns>
    <columns>Validity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>